--- a/morea/06.turtles/project2.html
+++ b/morea/06.turtles/project2.html
@@ -56,21 +56,21 @@
 <div class="container">
   <h1 id="project-2-turtle-drawing">Project 2: Turtle Drawing</h1>
 
-<p><em>In the beginning of the semester we drew interesting shapes on code.org. In this project, we will use the <a href="https://docs.python.org/3.4/library/turtle.html">turtle module</a> to draw shapes both iteratively and recursively. In this project, we will use loops, functions, conditions, and variables to draw pictures with the python turtle package.</em></p>
+<p><em>In the beginning of the semester we drew interesting shapes on code.org. In this project, we will use python’s <a href="https://docs.python.org/3.4/library/turtle.html">turtle module</a> to draw shapes both iteratively and recursively. In this project, we will use loops, functions, conditions, and variables to draw pictures with the python turtle package.</em></p>
 
 <p><em><strong>You must work with a partner (unless granted permission in advance)</strong>; make sure both students are clearly identified in the comments at the top of each program.</em></p>
 
-<p><em>An important skill as a computer scientist is the ability to learn how to use an existing API library by reading documentation, finding good API usage examples on the internet, and adapting those examples to meet your needs. In this project, you will begin building these skills to help you make the transition from the classroom to practice.</em></p>
+<p>An important skill as a computer scientist is the ability to learn how to use an existing API library by reading documentation, finding good API usage examples on the internet, and adapting those examples to meet your needs. In this project, you will begin building these skills to help you make the transition from classroom to practice.</p>
 
 <p>To complete the assignment, you will need:</p>
 
 <ul>
-  <li>Detailed project description (below)</li>
+  <li>Detailed project description (this page)</li>
   <li><a href="https://docs.python.org/3.4/library/turtle.html#overview-of-available-turtle-and-screen-methods">Python turtle documentation</a></li>
-  <li>May need to use <code>python</code> (<em>not</em> <code>python3</code>) to run your turtle programs</li>
+  <li>May need to use <code>python</code> (rather than <code>python3</code>) to run your turtle programs</li>
 </ul>
 
-<p>If you get stuck, please e-mail me a zip file of your project and a description of:</p>
+<p>If you get stuck, please e-mail me a zip file of your project, a screenshot, and a description of:</p>
 
 <ol>
   <li>What you expect to happen</li>
@@ -87,12 +87,12 @@
 
 <h3 id="draw-a-line">1. Draw a line</h3>
 
-<p>Create a python program where you can play with turtles. Draw a line on the screen using the python turtle package. I learned how to make turtle programs by using <a href="http://openbookproject.net/thinkcs/python/english3e/hello_little_turtles.html">these examples</a></p>
+<p>Create a python program where you can play with turtles. Draw a line on the screen using the python turtle package. I learned how to make turtle programs by using <a href="http://openbookproject.net/thinkcs/python/english3e/hello_little_turtles.html">these examples</a>.</p>
 
 <p>A basic turtle program looks like the following:</p>
 
 <pre><code>import turtle
-turtle.shape("turtle") # optional
+turtle.shape("turtle") 	# optional
 turtle.speed(0)		    # optional
 
 turtle.forward(90)
@@ -150,7 +150,7 @@ turtle.Screen().exitonclick()
 1.	`pentagon(side)`: takes the length of a side as a parameter and draws an pentagon.
 -->
 
-<p>Test that your functions work by clearly drawing a square, rectangle, triangle, and hexagon on the screen. They shouldn’t overlap too much. For example:</p>
+<p>Test that your functions work by clearly drawing a square, rectangle, triangle, and octagon on the screen. They shouldn’t overlap too much. For example:</p>
 
 <p><img src="shapes.png" width="250" /></p>
 
@@ -281,7 +281,7 @@ tree(200, 45)
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-09-25 16:00:08 -0400</span></p>
+       Last update on: <span>2015-09-25 16:06:10 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
