--- a/morea/05.functions/phw7.html
+++ b/morea/05.functions/phw7.html
@@ -54,9 +54,9 @@
 
 
 <div class="container">
-  <h1 id="practice-hw6-functions">Practice HW6: Functions</h1>
+  <h1 id="practice-hw7-recursion">Practice HW7: Recursion</h1>
 
-<p>In this practice HW you will create XXX programs that take code we’ve previously written for other PHWs and turn them into functions.</p>
+<!--In this practice HW you will create 2 programs that take code we've previously written for other PHWs and turn them into functions.-->
 
 <!--<span class="h4">
   <span style="padding: 2px" class="label label-success">Rx: <20 min</span>
@@ -66,69 +66,36 @@
 </span>
 -->
 
-<h2 id="hellofunctionpy">hello_function.py</h2>
+<h2 id="powerpy">power.py</h2>
 
-<p>Write a function <code>hello</code> which takes a name as a parameter and prints “Hello, …”, replacing the ellipsis (…) with the parameter. Test your function by asking the user for their name.</p>
+<p>Write a function <code>power</code> which takes two numbers (<code>base</code> amd <code>exponent</code>) as parameters and calculates the value <code>base ** exponent</code> using recursion.</p>
 
-<h2 id="tipcalculatorpy">tip_calculator.py</h2>
+<p>Next write a function <code>power_loop</code> which takes two numbers (<code>base</code> amd <code>exponent</code>) as parameters and calculates the value <code>base ** exponent</code> using a loop.</p>
 
-<p>Recall <code>tip.py</code> from <a href="/150/morea/04.python/pwod3.html">PHW3</a>. Copy <code>tip.py</code> into <code>tip_calculator.py</code>. Modify it by creating a function <code>calculate_total</code> that takes 3 parameters and returns the total for the meal. The 3 parameters are:</p>
+<p>Test that both functions return the same value when called with the same parameters. </p>
 
-<ul>
-  <li><code>meal</code>: the cost of the meal</li>
-  <li><code>tax_rate</code>: the percent tax. For example, NJ tax would be 0.07.</li>
-  <li><code>tip_rate</code>: the percent tip. A 20% tip rate would be 0.20.</li>
-</ul>
+<h2 id="stepspy">steps.py</h2>
 
-<p>Use the same calculations as in the prior lab (NOT the CodeAcademy exercise). Specifically, proper tipping technique dictates that the tip should be calculated based on the total cost of the meal, before tax is applied. Then, print out the total with 2 decimal places. Don’t forget the dollar sign ($)!</p>
+<p>Write a function <code>text_steps</code> that takes a string as a parameter and prints the text as follows:</p>
 
-<p>Prompt the user to enter the cost of the meal, the tax rate, and the tip rate. Your final program should make two calls to <code>calculate_total</code>: one based on input from the user and one using the following call:</p>
-
-<pre><code>calculate_total(53.48, .07, .18)
+<pre><code>Enter text: CS@DREW rocks!
+CS@DREW rocks!
+S@DREW rocks!
+@DREW rocks!
+DREW rocks!
+REW rocks!
+EW rocks!
+W rocks!
+ rocks!
+rocks!
+ocks!
+cks!
+ks!
+s!
+!
 </code></pre>
 
-<p><em>Note that the total for the above meal with tax &amp; tip is $66.85.</em></p>
-
-<h2 id="absolutevaluepy">absolute_value.py</h2>
-
-<p>Write a function <code>absolute_value</code> that takes a number as a parameter and returns its absolute value without using any python functions (in other words, you should use an if statement not <code>abs</code>). Test that your function works by calling it twice, once with a positive and once with a negative number, and printing the results. <em>Your program should <strong>not</strong> get any input from the user.</em></p>
-
-<h2 id="ismultiplepy">is_multiple.py</h2>
-
-<p>Write a function <code>is_multiple</code> that takes a number and a multiple as parameters and returns true if the number is a multiple (i.e., if <code>number % multiple</code> is 0). Test that your function works by calling it twice, once with a multiple and once with a number that is not its multiple, and print the results. <em>Your program should <strong>not</strong> get any input from the user.</em></p>
-
-<p>For example:</p>
-
-<table>
-  <thead>
-    <tr>
-      <th style="text-align: center"><strong>call</strong></th>
-      <th style="text-align: center"><strong>returns</strong></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td style="text-align: center"><code>is_multiple(10, 5)</code></td>
-      <td style="text-align: center">True</td>
-    </tr>
-    <tr>
-      <td style="text-align: center"><code>is_multiple(10, 7)</code></td>
-      <td style="text-align: center">False</td>
-    </tr>
-    <tr>
-      <td style="text-align: center"><code>is_multiple(8, 4)</code></td>
-      <td style="text-align: center">True</td>
-    </tr>
-    <tr>
-      <td style="text-align: center"><code>is_multiple(8, 3)</code></td>
-      <td style="text-align: center">False</td>
-    </tr>
-  </tbody>
-</table>
-
-<h2 id="rectanglepy">rectangle.py</h2>
-
-<p>Create a program that draws a filled rectangle of asterix characters, requesting the width and height from the user. Write a function <code>rectangle</code> that takes the number of rows and columns (i.e, height &amp; width) as parameters. If the width or height entered by the user is less than 1, the function prints an informative error message. Otherwise, the function prints the filled rectangle. Make sure to test your program with positive and negative values for width &amp; height. <em>Hint:</em> you may find the <a href="https://drive.google.com/a/drew.edu/file/d/0B46T_IyJH_ovLWpObFZkLXdsM0U/view?usp=sharing"><code>loop_fun.py</code> example from class</a> (part C, using 2 loops) to be helpful.</p>
+<p>Test your function works by getting a string as input from the user.</p>
 
 <!--## Demonstration
 
@@ -170,7 +137,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-09-30 13:25:48 -0400</span></p>
+       Last update on: <span>2015-10-01 14:20:12 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
