phw7 phw6 video relase

--- a/morea/05.functions/phw6.html
+++ b/morea/05.functions/phw6.html
@@ -129,32 +129,34 @@
 
 <p>Create a program that draws a filled rectangle of asterix characters, requesting the width and height from the user. Write a function <code>rectangle</code> that takes the number of rows and columns (i.e, height &amp; width) as parameters. If the width or height entered by the user is less than 1, the function prints an informative error message. Otherwise, the function prints the filled rectangle. Make sure to test your program with positive and negative values for width &amp; height. <em>Hint:</em> you may find the <a href="https://drive.google.com/a/drew.edu/file/d/0B46T_IyJH_ovLWpObFZkLXdsM0U/view?usp=sharing"><code>loop_fun.py</code> example from class</a> (part C, using 2 loops) to be helpful.</p>
 
-<!--## Demonstration
+<h2 id="demonstration">Demonstration</h2>
 
-Once you've finished doing the HW a single time, you can watch me do it:
+<p>Once you’ve finished doing the HW a single time, you can watch me do it:</p>
 
 <div class="video-container">
-  <iframe  src="http://www.youtube.com/embed/0BPlMXkwdcY" frameborder="0" allowfullscreen></iframe>
+  <iframe src="http://www.youtube.com/embed/0BPlMXkwdcY" frameborder="0" allowfullscreen=""></iframe>
 </div>
 
-## Standard Practice HW Caveats
+<h2 id="standard-practice-hw-caveats">Standard Practice HW Caveats</h2>
 
-You’ll learn significantly less from watching me solve the
-HW if you haven’t attempted the HW yourself first.
+<p>You’ll learn significantly less from watching me solve the
+HW if you haven’t attempted the HW yourself first.</p>
 
-While it's an achievement to finish the HW no matter how long it takes, you
-might experience "diminishing returns" if you work longer than the DNF (Did Not Finish)
+<p>While it’s an achievement to finish the HW no matter how long it takes, you
+might experience “diminishing returns” if you work longer than the DNF (Did Not Finish)
 time. Thus, it might be strategic to stop working at the DNF time and watch
-my solution.
+my solution.</p>
 
-After watching my solution, I recommend that you repeat the HW if you
-have not achieved at least Av (Average) performance. If so, be sure to:
+<p>After watching my solution, I recommend that you repeat the HW if you
+have not achieved at least Av (Average) performance. If so, be sure to:</p>
 
-  * Delete your old project so you cannot refer to it;
-  * Don’t look at my screencast while you HW; and
-  * Reset your timer.
+<ul>
+  <li>Delete your old project so you cannot refer to it;</li>
+  <li>Don’t look at my screencast while you HW; and</li>
+  <li>Reset your timer.</li>
+</ul>
 
-Feel free to keep trying until you make Rx if that’s of interest to you.-->
+<p>Feel free to keep trying until you make Rx if that’s of interest to you.</p>
 
 </div>
 
@@ -169,7 +171,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-10-01 14:20:12 -0400</span></p>
+       Last update on: <span>2015-10-01 14:51:37 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
