--- a/morea/05.functions/phw7.html
+++ b/morea/05.functions/phw7.html
@@ -58,17 +58,16 @@
 
 <!--In this practice HW you will create 2 programs that take code we've previously written for other PHWs and turn them into functions.-->
 
-<!--<span class="h4">
-  <span style="padding: 2px" class="label label-success">Rx: <20 min</span>
-  <span style="padding: 2px" class="label label-info">Av: 20-40 min</span>
-  <span style="padding: 2px" class="label label-warning">Sd: 40-60 min</span>
-  <span style="padding: 2px" class="label label-danger">DNF: 60+ min</span>
-</span>
--->
+<p><span class="h4">
+  <span style="padding: 2px" class="label label-success">Rx: &lt;15 min</span>
+  <span style="padding: 2px" class="label label-info">Av: 15-30 min</span>
+  <span style="padding: 2px" class="label label-warning">Sd: 30-45 min</span>
+  <span style="padding: 2px" class="label label-danger">DNF: 45+ min</span>
+</span></p>
 
 <h2 id="powerpy">power.py</h2>
 
-<p>Write a function <code>power</code> which takes two numbers (<code>base</code> amd <code>exponent</code>) as parameters and calculates the value <code>base ** exponent</code> using recursion.</p>
+<p>Write a function <code>power</code> which takes two numbers (<code>base</code> amd <code>exponent</code>) as parameters and calculates the value <code>base ** exponent</code> using recursion by repeatedly multiplying <code>base</code>.</p>
 
 <p>Next write a function <code>power_loop</code> which takes two numbers (<code>base</code> amd <code>exponent</code>) as parameters and calculates the value <code>base ** exponent</code> using a loop.</p>
 
@@ -76,7 +75,7 @@
 
 <h2 id="stepspy">steps.py</h2>
 
-<p>Write a function <code>text_steps</code> that takes a string as a parameter and prints the text as follows:</p>
+<p>Write a function <code>text_steps</code> that takes a string as a parameter and recursively prints the text as follows:</p>
 
 <pre><code>Enter text: CS@DREW rocks!
 CS@DREW rocks!
@@ -102,7 +101,7 @@ s!
 Once you've finished doing the HW a single time, you can watch me do it:
 
 <div class="video-container">
-  <iframe  src="http://www.youtube.com/embed/0BPlMXkwdcY" frameborder="0" allowfullscreen></iframe>
+  <iframe  src="http://www.youtube.com/embed/nTb-SeIGMCM" frameborder="0" allowfullscreen></iframe>
 </div>
 
 ## Standard Practice HW Caveats
@@ -137,7 +136,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-10-01 14:20:12 -0400</span></p>
+       Last update on: <span>2015-10-01 14:51:37 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
