midterm exam practice

--- a/morea/05.functions/exam-practice.html
+++ b/morea/05.functions/exam-practice.html
@@ -54,7 +54,7 @@
 
 
 <div class="container">
-  <h1 id="practice-hw7-go-with-the-control-flow">Practice HW7: Go with the (control) flow</h1>
+  <h1 id="midterm-practice-go-with-the-control-flow">Midterm Practice: Go with the (control) flow</h1>
 
 <p>Rather than writing a program, in this practice HW you will walk through the execution of a program on paper. <strong><em>You don’t need to run the program to complete the assignment.</em></strong></p>
 
@@ -157,7 +157,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-10-01 14:52:15 -0400</span></p>
+       Last update on: <span>2015-10-05 10:47:28 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
