exam practice solution

--- a/morea/05.functions/exam-practice.html
+++ b/morea/05.functions/exam-practice.html
@@ -88,61 +88,69 @@ Once you've finished doing the WOD a single time, you can watch me do it:
   <iframe  src="http://www.youtube.com/embed/0BPlMXkwdcY" frameborder="0" allowfullscreen></iframe>
 </div>-->
 
-<!--## Solution
+<h2 id="solution">Solution</h2>
 
-Order that the lines are executed:
+<p>Order that the lines are executed:</p>
 
-	34, 35, 36 get_area(+,+)
-		5, 6, 7
-	
-	36, 38 rectangle_outline
-		21, 22, 24, 25 draw_line(25)
-			16, 25 * (17, 18), 19
-	23 * (	22, 24, 28, 29, 23 * (30, 31), 32	)
-		22, 24, 25 draw_line(25)
-			16, 25 * (17, 18), 19 
+<pre><code>34, 35, 36 get_area(+,+)
+	5, 6, 7
 
-	40 get_area(-,+)
-		5, 6, 8, 9, 10, 11, 14
+36, 38 rectangle_outline
+	21, 22, 24, 25 draw_line(25)
+		16, 25 * (17, 18), 19
+23 * (	22, 24, 28, 29, 23 * (30, 31), 32	)
+	22, 24, 25 draw_line(25)
+		16, 25 * (17, 18), 19 
 
-	41 get_area(+,-)
-		5, 6, 8, 9, 10, 12, 13, 14
+40 get_area(-,+)
+	5, 6, 8, 9, 10, 11, 14
 
-	43, 44 draw_line
-		16, 17, 19
-	43, 44, 16, 1 * (17, 18), 19
-	43, 44, 16, 2 * (17, 18), 19
-	43, 44, 16, 3 * (17, 18), 19
-	43, 44, 16, 4 * (17, 18), 19
-	43
+41 get_area(+,-)
+	5, 6, 8, 9, 10, 12, 13, 14
 
-Questions:
+43, 44 draw_line
+	16, 17, 19
+43, 44, 16, 1 * (17, 18), 19
+43, 44, 16, 2 * (17, 18), 19
+43, 44, 16, 3 * (17, 18), 19
+43, 44, 16, 4 * (17, 18), 19
+43
+</code></pre>
 
-1. 34
-1. 43 or 19
-2. Fruitful or void?
-    * get_area:		fruitful
-	* draw_line:		void
-	* rectangle_outline:	void
+<p>Questions:</p>
 
-## Standard Practice HW Caveats
+<ol>
+  <li>34</li>
+  <li>43 or 19</li>
+  <li>Fruitful or void?
+    <ul>
+      <li>get_area:		fruitful</li>
+      <li>draw_line:		void</li>
+      <li>rectangle_outline:	void</li>
+    </ul>
+  </li>
+</ol>
 
-You’ll learn significantly less from watching me solve the
-HW if you haven’t attempted the HW yourself first.
+<h2 id="standard-practice-hw-caveats">Standard Practice HW Caveats</h2>
 
-While it's an achievement to finish the HW no matter how long it takes, you
-might experience "diminishing returns" if you work longer than the DNF (Did Not Finish)
+<p>You’ll learn significantly less from watching me solve the
+HW if you haven’t attempted the HW yourself first.</p>
+
+<p>While it’s an achievement to finish the HW no matter how long it takes, you
+might experience “diminishing returns” if you work longer than the DNF (Did Not Finish)
 time. Thus, it might be strategic to stop working at the DNF time and watch
-my solution.
+my solution.</p>
 
-After watching my solution, I recommend that you repeat the HW if you
-have not achieved at least Av (Average) performance. If so, be sure to:
+<p>After watching my solution, I recommend that you repeat the HW if you
+have not achieved at least Av (Average) performance. If so, be sure to:</p>
 
-  * Delete your old project so you cannot refer to it;
-  * Don’t look at my screencast while you HW; and
-  * Reset your timer.
+<ul>
+  <li>Delete your old project so you cannot refer to it;</li>
+  <li>Don’t look at my screencast while you HW; and</li>
+  <li>Reset your timer.</li>
+</ul>
 
-Feel free to keep trying until you make Rx if that’s of interest to you.-->
+<p>Feel free to keep trying until you make Rx if that’s of interest to you.</p>
 
 </div>
 
@@ -157,7 +165,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-10-05 12:58:33 -0400</span></p>
+       Last update on: <span>2015-10-08 17:32:56 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
