--- a/morea/06.turtles/project2.html
+++ b/morea/06.turtles/project2.html
@@ -172,7 +172,7 @@ turtle.Screen().exitonclick()
 
 <p><strong><em>Every submitted picture should look unique.</em></strong></p>
 
-<h3 id="polystarpy">polystar.py</h3>
+<h3 id="polygrampy">polygram.py</h3>
 
 <p>We can use a similar technique to draw stars with an arbitrary number of points. Write a program <code>polygram.py</code> with the following function:</p>
 
@@ -281,7 +281,7 @@ tree(200, 45)
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-10-05 12:58:33 -0400</span></p>
+       Last update on: <span>2015-10-08 17:32:56 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
