--- a/morea/07.lists/pwod.html
+++ b/morea/07.lists/pwod.html
@@ -135,41 +135,41 @@ w
   <li>Get input from the user</li>
 </ol>
 
-<!--## Demonstration
+<h2 id="demonstration">Demonstration</h2>
 
-
-Once you've finished doing the HW a single time, you can watch me do it. ***Note***, this video includes exercises in a different order:
-
-<div class="video-container">
-  <iframe  src="http://www.youtube.com/embed/hsjv5f2DlFk" frameborder="0" allowfullscreen></iframe>
-</div>
-
-Recursive solution to pyramid function in `text.py`:
+<p>Once you’ve finished doing the HW a single time, you can watch me do it. <strong><em>Note</em></strong>, this video includes exercises in a different order:</p>
 
 <div class="video-container">
-  <iframe  src="http://www.youtube.com/embed/yBrjRTtFiTE" frameborder="0" allowfullscreen></iframe>
+  <iframe src="http://www.youtube.com/embed/hsjv5f2DlFk" frameborder="0" allowfullscreen=""></iframe>
 </div>
 
-## Standard Practice HW Caveats
+<p>Recursive solution to pyramid function in <code>text.py</code>:</p>
 
-You’ll learn significantly less from watching me solve the
-HW if you haven’t attempted the HW yourself first.
+<div class="video-container">
+  <iframe src="http://www.youtube.com/embed/yBrjRTtFiTE" frameborder="0" allowfullscreen=""></iframe>
+</div>
 
-While it's an achievement to finish the HW no matter how long it takes, you
-might experience "diminishing returns" if you work longer than the DNF (Did Not Finish)
+<h2 id="standard-practice-hw-caveats">Standard Practice HW Caveats</h2>
+
+<p>You’ll learn significantly less from watching me solve the
+HW if you haven’t attempted the HW yourself first.</p>
+
+<p>While it’s an achievement to finish the HW no matter how long it takes, you
+might experience “diminishing returns” if you work longer than the DNF (Did Not Finish)
 time. Thus, it might be strategic to stop working at the DNF time and watch
-my solution.
+my solution.</p>
 
-After watching my solution, I recommend that you repeat the HW if you
-have not achieved at least Av (Average) performance. If so, be sure to:
+<p>After watching my solution, I recommend that you repeat the HW if you
+have not achieved at least Av (Average) performance. If so, be sure to:</p>
 
-  * Delete your old project so you cannot refer to it;
-  * Don’t look at my screencast while you HW; and
-  * Reset your timer.
+<ul>
+  <li>Delete your old project so you cannot refer to it;</li>
+  <li>Don’t look at my screencast while you HW; and</li>
+  <li>Reset your timer.</li>
+</ul>
 
-Feel free to keep trying until you make Rx if that’s of interest to you.
+<p>Feel free to keep trying until you make Rx if that’s of interest to you.</p>
 
--->
 
 </div>
 
@@ -184,7 +184,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-10-08 17:32:56 -0400</span></p>
+       Last update on: <span>2015-10-21 12:57:12 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
