--- a/morea/09.files/pwod.html
+++ b/morea/09.files/pwod.html
@@ -124,49 +124,51 @@ while value != sentinel:
   <li>You should add the file names <code>text1.txt</code>, <code>text2.txt</code>, and <code>text3.txt</code> to a list, so you don’t have to copy &amp; paste your code.</li>
 </ul>
 
-<!--## Demonstration
+<h2 id="demonstration">Demonstration</h2>
 
-
-Once you've finished doing the HW a single time, you can watch me do it for `while.py` and `count.py`:
+<p>Once you’ve finished doing the HW a single time, you can watch me do it for <code>while.py</code> and <code>count.py</code>:</p>
 
 <div class="video-container">
-  <iframe  src="http://www.youtube.com/embed/2GkDAxZOnt8" frameborder="0" allowfullscreen></iframe>
+  <iframe src="http://www.youtube.com/embed/2GkDAxZOnt8" frameborder="0" allowfullscreen=""></iframe>
 </div>
 
-My solution for `lines.py`:
+<p>My solution for <code>lines.py</code>:</p>
 
-	file_list = ["text1.txt", "text2.txt", "text3.txt"]
-	
-	count = open("counts.txt", "w")
-	
-	for file in file_list:
-		 f = open(file)
-		 num = sum(1 for line in f)
-		 # [filename]: [the number of lines in the file]
-		 print(file , ":" , num, file=count)
-		 #count.write(file + ": " + str(num) + "\n")
-		 f.close()
-	
-	count.close()
+<pre><code>file_list = ["text1.txt", "text2.txt", "text3.txt"]
 
-## Standard Practice HW Caveats
+count = open("counts.txt", "w")
 
-You’ll learn significantly less from watching me solve the
-HW if you haven’t attempted the HW yourself first.
+for file in file_list:
+	 f = open(file)
+	 num = sum(1 for line in f)
+	 # [filename]: [the number of lines in the file]
+	 print(file , ":" , num, file=count)
+	 #count.write(file + ": " + str(num) + "\n")
+	 f.close()
 
-While it's an achievement to finish the HW no matter how long it takes, you
-might experience "diminishing returns" if you work longer than the DNF (Did Not Finish)
+count.close()
+</code></pre>
+
+<h2 id="standard-practice-hw-caveats">Standard Practice HW Caveats</h2>
+
+<p>You’ll learn significantly less from watching me solve the
+HW if you haven’t attempted the HW yourself first.</p>
+
+<p>While it’s an achievement to finish the HW no matter how long it takes, you
+might experience “diminishing returns” if you work longer than the DNF (Did Not Finish)
 time. Thus, it might be strategic to stop working at the DNF time and watch
-my solution.
+my solution.</p>
 
-After watching my solution, I recommend that you repeat the HW if you
-have not achieved at least Av (Average) performance. If so, be sure to:
+<p>After watching my solution, I recommend that you repeat the HW if you
+have not achieved at least Av (Average) performance. If so, be sure to:</p>
 
-  * Delete your old project so you cannot refer to it;
-  * Don’t look at my screencast while you HW; and
-  * Reset your timer.
+<ul>
+  <li>Delete your old project so you cannot refer to it;</li>
+  <li>Don’t look at my screencast while you HW; and</li>
+  <li>Reset your timer.</li>
+</ul>
 
-Feel free to keep trying until you make Rx if that’s of interest to you.-->
+<p>Feel free to keep trying until you make Rx if that’s of interest to you.</p>
 
 
 </div>
@@ -182,7 +184,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-10-26 13:11:44 -0400</span></p>
+       Last update on: <span>2015-10-28 13:00:11 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
