--- a/morea/10.dict/hw.html
+++ b/morea/10.dict/hw.html
@@ -54,7 +54,7 @@
 
 
 <div class="container">
-  <h1 id="phw13-word-frequencies">PHW13: Word Frequencies</h1>
+  <h1 id="hw9-word-frequencies">HW9: Word Frequencies</h1>
 
 <p>Write a program <code>frequency.py</code> that reads in <a href="data/turing.txt">the file <code>turing.txt</code></a> and counts the number of occurrences of each word. Your program should print out these word occurrences in sorted order by decreasing frequency value. For example, “the” occurs 10 times and would be printed out before “Alan”, which occurs just once.</p>
 
@@ -186,7 +186,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-10-28 13:00:11 -0400</span></p>
+       Last update on: <span>2015-10-30 13:59:27 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
