--- a/morea/11.oo/project.html
+++ b/morea/11.oo/project.html
@@ -93,7 +93,7 @@
   <li><code>zip project5_uLogin.zip project5_uLogin/*</code></li>
 </ul>
 
-<p><em>Assignment adapted from <a href="https://www.cs.hmc.edu/twiki/bin/view/CS5/FunWithImagesGold2010">Harvey Mudd’s CS 5 Fun with Images</a>.</em></p>
+<!--*Assignment adapted from [Harvey Mudd's CS 5 Fun with Images](https://www.cs.hmc.edu/twiki/bin/view/CS5/FunWithImagesGold2010).*-->
 
 </div>
 
@@ -108,7 +108,7 @@
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-11-30 11:27:22 -0500</span></p>
+       Last update on: <span>2015-11-30 11:28:24 -0500</span></p>
     <p style="margin: 0">
       12 modules
       
