--- a/morea/11.oo/project.html
+++ b/morea/11.oo/project.html
@@ -66,18 +66,23 @@
   <li><code>csplot.py</code>: helper functions to draw the game <strong>DO NOT MODIFY</strong></li>
 </ul>
 
-<p><strong>Steps:</strong></p>
+<p>You should only have to modify <code>connectfour.py</code> and <strong><em>not</em></strong> <code>csplot.py</code> or <code>game.py</code>.</p>
 
-<ol>
-  <li>Open up <code>connectfour.py</code> and look at the <code>ConnectFour</code> class. Familiarize yourself with its attributes and how the methods are implemented.</li>
-  <li>Uncomment the <code>makeMove</code> method and its comment and implement the method. Adhere to the method’s comment description when implementing the method.</li>
-  <li>Uncomment the code in the play method to test <code>makeMove</code>. Run <code>game.py</code> to test.</li>
-  <li>Implement <code>_isWon</code> to determine if a player has won.</li>
-  <li>Uncomment the code in the play method to test <code>_isWon</code>.</li>
-  <li>Run <code>game.py</code> to test your game.</li>
-</ol>
+<h2 id="step-1-understand-connectfour">Step 1: Understand <code>ConnectFour</code></h2>
 
-<p>You should only have to modify <code>connectfour.py</code> and <strong><em>not</em></strong> <code>csplot.py</code> or <code>game.py</code>. You may have to hit Control-C to kill the game if closing the window does not work.</p>
+<p>Open up <code>connectfour.py</code> and look at the <code>ConnectFour</code> class. Familiarize yourself with its attributes (fields) and how the methods are implemented. Pay special attention to how you might implement making a move and determining who the winner is.</p>
+
+<p>Run the game &amp; submit a screenshot for check point 1. You may have to hit Control-C to kill the game if closing the window does not work.</p>
+
+<h2 id="step-2-makemove">Step 2: <code>makeMove</code></h2>
+
+<p>Uncomment the <code>makeMove</code> method and its comment and implement the method. Adhere to the method’s comment description when implementing the method.</p>
+
+<p>Then, uncomment the code in the play method to test <code>makeMove</code>. Run <code>game.py</code> to test. Take a screenshot &amp; submit a screenshot for check point 2 (make sure to show your code &amp; a board with colored tiles).</p>
+
+<h2 id="step-3-iswon">Step 3: <code>_isWon</code></h2>
+
+<p>Implement <code>_isWon</code> to determine if a player has won. Uncomment the code in the play method to test <code>_isWon</code>. Run <code>game.py</code> to test your game. When you’ve tested that both players can win, you’re ready to submit.</p>
 
 <!--Draw a UML diagram of the given code. Example for the Date class:
 -->
@@ -108,7 +113,7 @@
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-11-30 11:28:24 -0500</span></p>
+       Last update on: <span>2015-11-30 11:44:09 -0500</span></p>
     <p style="margin: 0">
       12 modules
       
