project 5 extra credit

--- a/morea/11.oo/project.html
+++ b/morea/11.oo/project.html
@@ -72,20 +72,26 @@
 
 <p>Open up <code>connectfour.py</code> and look at the <code>ConnectFour</code> class. Familiarize yourself with its attributes (fields) and how the methods are implemented. Pay special attention to how you might implement making a move and determining who the winner is.</p>
 
-<p>Run the game &amp; submit a screenshot for check point 1. You may have to hit Control-C to kill the game if closing the window does not work.</p>
+<p>Run <code>game.py</code> &amp; submit a screenshot for check point 1. You may have to hit Control-C to kill the game if closing the window does not work.</p>
 
 <h2 id="step-2-makemove">Step 2: <code>makeMove</code></h2>
 
-<p>Uncomment the <code>makeMove</code> method and its comment and implement the method. Adhere to the method’s comment description when implementing the method.</p>
+<p>Implement the <code>makeMove</code> method. Adhere to the method’s comment description when implementing the method.</p>
 
-<p>Then, uncomment the code in the play method to test <code>makeMove</code>. Run <code>game.py</code> to test. Take a screenshot &amp; submit a screenshot for check point 2 (make sure to show your code &amp; a board with colored tiles).</p>
+<p>Then, test <code>makeMove</code> by running <code>game.py</code>. Take a screenshot &amp; submit a screenshot for check point 2 (make sure to show your code &amp; a board with colored tiles).</p>
 
 <h2 id="step-3-iswon">Step 3: <code>_isWon</code></h2>
 
-<p>Implement <code>_isWon</code> to determine if a player has won. Uncomment the code in the play method to test <code>_isWon</code>. Run <code>game.py</code> to test your game. When you’ve tested that both players can win, you’re ready to submit.</p>
+<p>Implement <code>_isWon</code> to determine if a player has won. You may want to try implementing it for the tic tac toe game we looked at in class (<code>tictactoe2.py</code>), and then see how your solution could be adapted to go from looking at 3 spots to 4.</p>
+
+<p>Run <code>game.py</code> to test your game. When you’ve tested that both players can win, you’re ready to submit.</p>
 
 <!--Draw a UML diagram of the given code. Example for the Date class:
 -->
+
+<h2 id="extra-credit-smarter-computer-player">Extra Credit: Smarter computer player</h2>
+
+<p>For extra credit, change <code>_computerMakeMove</code> to be more intelligent &amp; actively prevent the human player from winning.</p>
 
 <h2 id="submission">Submission</h2>
 
@@ -113,7 +119,7 @@
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-11-30 11:44:09 -0500</span></p>
+       Last update on: <span>2015-11-30 14:07:08 -0500</span></p>
     <p style="margin: 0">
       12 modules
       
