project 5 extra credit 2

--- a/morea/11.oo/project.html
+++ b/morea/11.oo/project.html
@@ -93,6 +93,10 @@
 
 <p>For extra credit, change <code>_computerMakeMove</code> to be more intelligent &amp; actively prevent the human player from winning.</p>
 
+<h2 id="extra-credit-checkers">Extra Credit: Checkers</h2>
+
+<p>Implement support in <code>ConnectFour</code> to play a checkers game. Write your own <code>checkers.py</code> main program to run that instead of <code>ConnectFour</code>.</p>
+
 <h2 id="submission">Submission</h2>
 
 <p>Make sure you’ve added your name to the comments at the top of the file, that your program contains comments and follows good programming style.</p>
@@ -119,7 +123,7 @@
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-11-30 14:07:08 -0500</span></p>
+       Last update on: <span>2015-11-30 14:08:52 -0500</span></p>
     <p style="margin: 0">
       12 modules
       
